name:                  mvc-examples
version:               0.1.0.0
synopsis:              Haskell MVC Examples
author:                Chris Mahon
maintainer:            cnmahon@gmail.com
build-type:            Simple
cabal-version:         >=1.10

executable consoleinout
  main-is:             ConsoleInOut.hs
  build-depends:       base >=4.6 && <4.7, mvc >= 1.0.0, pipes >= 4.1.0
  default-language:    Haskell2010

executable rectangles
  main-is:             Rectangles.hs
  c-sources:           c_main.c
  ghc-options:         -no-hs-main -Wall
  include-dirs:        /usr/local/include/SDL
  other-extensions:    ForeignFunctionInterface
  build-depends:       base >=4.6 && <4.7, lens-family-core >= 1.0.0, mvc >= 1.0.0, pipes >= 4.1.0, SDL
  default-language:    Haskell2010

