name:                  mvc-examples
version:               0.1.0.0
synopsis:              Haskell MVC Examples
author:                Chris Mahon
maintainer:            cnmahon@gmail.com
build-type:            Simple
cabal-version:         >= 1.8.0.2
Data-Dir: img
Data-Files:
    frame0.png,
    frame1.png,
    frame2.png,
    frame3.png,
    island.jpg

executable consoleinout
  main-is:             ConsoleInOut.hs
  build-depends:       base >=4.6 && <4.7, mvc >= 1.0.0, pipes >= 4.1.0
  default-language:    Haskell2010

executable rectangles
  main-is:             RectanglesMain.hs
  c-sources:           rectangles_main.c
  ghc-options:         -no-hs-main -Wall
  include-dirs:        /usr/local/include/SDL
  other-extensions:    ForeignFunctionInterface
  build-depends:       base >=4.6 && <4.7, lens-family-core >= 1.0.0, mvc >= 1.0.0, pipes >= 4.1.0, SDL
  default-language:    Haskell2010

Executable flappy
    Main-Is:           FlappyMain.hs
    c-sources:         flappy_main.c
    ghc-options:       -no-hs-main -Wall
    include-dirs:      /usr/local/include/SDL
    other-extensions:  ForeignFunctionInterface
    Build-Depends:
        base           >= 4       && < 5   ,
        foldl          >= 1.0.5   && < 1.1 ,
        mvc            >= 1.0.1   && < 1.1 ,
        mvc-updates    >= 1.0.0   && < 1.1 ,
        SDL            >= 0.6.5   && < 0.7 ,
        SDL-image      >= 0.6.1   && < 0.7
    Other-Modules: Flappy, Paths_mvc_examples

Executable spreadsheet
    Main-Is: SpreadsheetMain.hs
    Build-Depends:
        base           >= 4       && < 5   ,
        async          >= 2.0.0   && < 2.1 ,
        foldl          >= 1.0.5   && < 1.1 ,
        gtk            >= 0.12.4  && < 0.13,
        lens-family-th >= 0.3.0.0 && < 0.4 ,
        mvc            >= 1.0.1   && < 1.1 ,
        mvc-updates    >= 1.0.0   && < 1.1
    Other-Modules: Spreadsheet
    GHC-Options: -O2 -Wall -threaded